initialize swagger for all apps
