# user-app/api/handler/profile_handler.go
@@ -20,6 +20,15 @@ func NewProfileHandler(userService *service.UserService) *ProfileHandler {
 	}
 }
 
+// Profile godoc
+// @Tags profile
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Success 200 {object} handler.Response[models.UserProfileOutPutModel]
+// @Failure 400 {object} errs.Error
+// @Failure 422 {object} errs.ValidationError
+// @Router /profile [get]
 func (u *ProfileHandler) Profile(c *gin.Context) (*handler.Response[models.UserProfileOutPutModel], error) {
 	user, err := u.GetUser(c)
 	if err != nil {
@@ -35,6 +44,16 @@ func (u *ProfileHandler) Profile(c *gin.Context) (*handler.Response[models.UserP
 	return handler.OK(profile), nil
 }
 
+// ChangePassword godoc
+// @Tags profile
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param input   body  models.UserChangePasswordInputModel  true  "input model"
+// @Success 200 {object} handler.Response[uuid.UUID]
+// @Failure 400 {object} errs.Error
+// @Failure 422 {object} errs.ValidationError
+// @Router /profile/change-password [post]
 func (u *ProfileHandler) ChangePassword(c *gin.Context, req models.UserChangePasswordInputModel) (*handler.Response[uuid.UUID], error) {
 	user, err := u.GetUser(c)
 	if err != nil {
@@ -50,6 +69,16 @@ func (u *ProfileHandler) ChangePassword(c *gin.Context, req models.UserChangePas
 	return handler.OK(&user.ID, "Password changed successfully"), nil
 }
 
+// ChangePassword godoc
+// @Tags profile
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param input   body  models.UserChangeProfileInputModel  true  "input model"
+// @Success 200 {object} handler.Response[models.UserProfileOutPutModel]
+// @Failure 400 {object} errs.Error
+// @Failure 422 {object} errs.ValidationError
+// @Router /profile [post]
 func (u *ProfileHandler) ChangeProfile(c *gin.Context, req models.UserChangeProfileInputModel) (*handler.Response[models.UserProfileOutPutModel], error) {
 	user, err := u.GetUser(c)
 	if err != nil {
